reading vars to be interpolated from env vars